fix(flight): increase contrast on various labels for accessability

--- a/flight.css
+++ b/flight.css
@@ -123,8 +123,8 @@
 .text-black {
 	color: #000000;
 }
-.text-neutral-500 {
-	color: #737373;
+.text-neutral-600 {
+	color: #525252;
 }
 .bg-white {
 	background-color: #ffffff;
